force-app/main/default/objects/VMI_Product__c/VMI_Product__c.object-meta.xml
<CustomObject>
    <label>VMI Product</label>
    <nameField>
        <label>VMI Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VMI Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>