force-app/main/default/objects/VMI_Product__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>VMI Products</relationshipLabel>
    <relationshipName>VMI_Products</relationshipName>
    <type>Lookup</type>
</CustomField>