force-app/main/default/objects/VMI_Product__c/fields/Par_Level__c.field-meta.xml
<CustomField>
    <fullName>Par_Level__c</fullName>
    <label>Par Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>