force-app/main/default/objects/VMI_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Product selected is not a VMI Product</errorMessage>
        <filterItems>
            <field>Product2.VMI_Product__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>VMI Products</relationshipLabel>
    <relationshipName>VMI_Products</relationshipName>
    <type>Lookup</type>
</CustomField>