force-app/main/default/objects/VMI_Product__c/fields/Quantity_Per_Visit__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Per_Visit__c</fullName>
    <label>Quantity Per Visit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>